  - Some default settings have changed:
    * priorfacloadtype = "rowwiseng" (was: "normal")
    * priorfacload = 0.1 (was 1)
    * runningstore = 6 (was: 1)
  - Arguments to fsvsample were reordered.
  - Previous default plotting function plot.fsvsdraws has been renamed to
    diagplot. New default plotting function now shows a correlation matrix.

Changes in version 0.9.1
  - Default for argument "restrict" in fsvsample is now "none". This
    alleviates the problem of (potentially) introducing arbitrary zeros which
    are not in line with the data.
  - Fixed glitches in the documentation. Thanks to Gregor Zens for pointing
    these out.

Changes in version 0.9
  - Required changes to be compatible with stochvol 2.0.0. Concerns low-level
    functionality only.
  - References updated.

Changes in version 0.8.3
  - Default for argument "restrict" in fsvsample is now "auto". This does not
    require the end-user to pre-sort the data but instead imposes zeros
    in the factor loadings matrix according to a preliminary static
    factor analysis.
  - New function findrestrict.
  - New function orderident.
  - Changed default burn-in in fsvsample to 1000 (from 100).
  - Changed default value of runningstorethin in fsvsample to 10 (from 1).
  - The function logret can now standardize so that each series has (empirical)
    variance equal to 1.
  - Requires stochvol version >= 1.3.2.
  - New function expweightcov.
  - Changed default values for priorh0fac and priorphifac in fsvsample.
  - h0 is now stored and returned by default by fsvsample.
  - Added new argument "startlatent0" for passing starting values for h0
    in fsvsample.
  - Changed some default starting values to (somewhat) resemble those often
    encountered in real data applications. This could decrease burn-in time.

Changes in version 0.8.2
  - The function predprecision is now called predprecWB.
  - The first two arguments of predloglik and predloglikWB were interchanced.