@@ -4,20 +4,20 @@
 \alias{cormat.fsvsim}
 \title{Extract "true" model-implied correlation matrix for several points in time}
 \usage{
-\method{cormat}{fsvsim}(x, these = seq_len(nrow(x$y)), ...)
+\method{cormat}{fsvsim}(x, timepoints = "all", ...)
 }
 \arguments{
 \item{x}{Object of class \code{'fsvsim'}, usually resulting from a call
 of the function \code{\link{fsvsim}}.}
 
-\item{these}{Vector indicating which points in time should be extracted,
-defaults to all.}
+\item{timepoints}{Vector indicating at which point(s) in time the
+correlation matrices should be extracted. Can also be "all" or "last".}
 
 \item{...}{Ignored.}
 }
 \value{
 Array of dimension \code{m} times \code{m} times
-\code{length(these)}, containing the model-implied correlation matrix.
+\code{length(timepoints)}, containing the model-implied correlation matrix.
 }
 \description{
 \code{cormat} extracts the model-implied (time-varying) covariance matrix
