@@ -23,6 +23,7 @@ Changes in version 0.9.2
   - Arguments to fsvsample were reordered.
   - Previous default plotting function plot.fsvsdraws has been renamed to
     diagplot. New default plotting function now shows a correlation matrix.
+  - New generic extractor: cormat (cormat.fsvdraws and cormat.fsvsim)
 
 Changes in version 0.9.1
   - Default for argument "restrict" in fsvsample is now "none". This
